@@ -412,6 +412,12 @@
             <imagepath background="true" diffuse="arctic/dialog/filebg.png">$INFO[Skin.String(GlobalBackdropMulti)]</imagepath>
             <visible>!IsEmpty(Skin.String(GlobalBackdropMulti))</visible>
         </control>
+        
+        <control type="multiimage">
+            <include>SettingsBackgroundDialogMultiImageVars</include>
+            <imagepath background="true" diffuse="arctic/dialog/filebg.png">$INFO[Skin.String(WeatherFanartDir)]$INFO[Window(Weather).Property(Current.FanartCode)]</imagepath>
+            <visible>Skin.HasSetting(GlobalBackdropWeather)</visible>
+        </control>
 
         <control type="grouplist" id="3">
             <include>SettingsBackgroundDialogGroupListVars</include>
@@ -425,6 +431,7 @@
                 <include>SettingsBackgroundDialogRadioButtonVars-l</include>
                 <selected>!IsEmpty(Skin.String(GlobalBackdropSingle))</selected>
                 <onclick>Skin.Reset(GlobalBackdropMulti)</onclick>
+                <onclick>Skin.Reset(GlobalBackdropWeather)</onclick>
                 <onclick>Skin.SetString(GlobalBackdropSingle,special://skin/extras/backgrounds/01.jpg)</onclick>
                 <label>$LOCALIZE[41252]</label>
                 <animation effect="fade" end="47" time="0" condition="!Control.IsEnabled(2102)">Conditional</animation>
@@ -433,9 +440,20 @@
                 <include>SettingsBackgroundDialogRadioButtonVars-l</include>
                 <selected>!IsEmpty(Skin.String(GlobalBackdropMulti))</selected>
                 <onclick>Skin.Reset(GlobalBackdropSingle)</onclick>
+                <onclick>Skin.Reset(GlobalBackdropWeather)</onclick>
                 <onclick>Skin.SetString(GlobalBackdropMulti,special://skin/extras/backgrounds/)</onclick>
                 <label>$LOCALIZE[41253]</label>
                 <animation effect="fade" end="47" time="0" condition="!Control.IsEnabled(2103)">Conditional</animation>
+            </control>
+            <control type="radiobutton" id="2104">
+                <include>SettingsBackgroundDialogRadioButtonVars-l</include>
+                <selected>Skin.HasSetting(GlobalBackdropWeather)</selected>
+                <onclick>Skin.Reset(GlobalBackdropSingle)</onclick>
+                <onclick>Skin.Reset(GlobalBackdropMulti)</onclick>
+                <onclick>Skin.SetBool(GlobalBackdropWeather)</onclick>
+                <label>8</label>
+                <animation effect="fade" end="47" time="0" condition="!Control.IsEnabled(2104)">Conditional</animation>
+                <enable>!IsEmpty(Skin.String(WeatherFanartDir))</enable>
             </control>
         </control>
         
